# PyNN

./: .gitignore  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README  README.rst  __init__.py  changelog  checkAPI.py  codemeta.json  common.py  facetsml.py  izhikevich_neuron.nestml  nest.py  nest1.py  nest2.py  neuroml.py  neuron.py  neuron2.py  oldneuron.py  pcsim.py  pyNN.kpf  pyproject.toml  random.py  requirements.txt  setup.py
.github/workflows/: ebrains.yml  full-test.yml
ci/: install.sh  install_brian.sh  install_nest.sh  install_neuron.sh  test_script.sh  upload_coveralls.sh
doc/: ESSPyNN07.txt  ESSPyNN08.txt  Makefile  README  api.txt  api_reference.txt  apidoc.py  backends.txt  build_examples.py  building_networks.txt  conf.py  connections.txt  contributors.txt  data_handling.txt  descriptions.txt  developers_guide.txt  download.txt  dynamicsynapses.txt  examples.txt  fileformats.txt  highlevelapi.txt  highlevelapi_pcsim.txt  import_export.txt  index.txt  injecting_current.txt  installation.txt  introduction.txt  logging.txt  lowlevelapi.txt  make.bat  mc_aims.txt  mc_api.txt  mc_examples.txt  mc_installation.txt  neuromorphichardware.txt  neurons.txt  nineml.txt  nonstandardmodels.txt  outline.txt  parallel.txt  (+18 more)
doc/_static/: custom.css
doc/api/: api-0.3.trac.txt  api-0.3.txt  api-0.4.trac.txt  api-0.4.txt  api-0.5.trac.txt  api-0.5.txt  api-0.6.trac.txt  api-0.6.txt  api-0.7.trac.txt  api-0.7.txt
doc/backends/: Brian.txt  MOOSE.txt  NEST.txt  NEURON.txt  NeMo.txt  NeuroML.txt  NineML.txt  PCSIM.txt  neuromorphic.txt
doc/developers/: adding_backend.txt  bug_reports.txt  contributing.txt  governance.txt
doc/examples/: Brunel.txt  HH_cond_exp.txt  IF_cond_exp.txt  Izhikevich.txt  SimpleNetwork.txt  SimpleNetworkL.txt  SimpleRandomNetwork.txt  StepCurrentSource.txt  TsodyksMarkram.txt  VAbenchmarks.txt  VogelsAbbott.txt  cell_type_demonstration.txt  current_injection.txt  random_distributions.txt  random_numbers.txt  simple_STDP.txt  small_network.txt  stochastic_deterministic_comparison.txt  stochastic_synapses.txt  synaptic_input.txt  tsodyksmarkram.txt  varying_poisson.txt
doc/pyplots/: ac_source.py  continuous_time_spiking.py  dc_source.py  neo_example.py  noise_source.py  plot_current_source.py  plot_helper.py  reset_example.py  step_source.py
doc/reference/: connectors.txt  electrodes.txt  neuronmodels.txt  parameters.txt  plasticitymodels.txt  populations.txt  projections.txt  random.txt  simulationcontrol.txt  space.txt  utility.txt
doc/releases/: 0.10.0.txt  0.10.1.txt  0.11.0.txt  0.12.0.txt  0.12.1.txt  0.12.2.txt  0.12.3.txt  0.12.4.txt  0.13.0.txt  0.6.txt  0.7.txt  0.8-alpha-1.txt  0.8-alpha-2.txt  0.8-beta-1.txt  0.8-beta-2.txt  0.8.0-rc-1.txt  0.8.0.txt  0.8.1.txt  0.8.2.txt  0.8.3.txt  0.9.0.txt  0.9.1.txt  0.9.2.txt  0.9.3.txt  0.9.4.txt  0.9.5.txt  0.9.6.txt
examples/: EIF_cond_alpha_isfa_ista.py  EIF_cond_exp_isfa_ista.py  HH_cond_exp.py  HH_cond_exp2.py  IF_and_HH_responses_to_injection.py  IF_cond_alpha.py  IF_cond_exp.py  IF_curr_alpha.py  IF_curr_alpha2.py  IF_curr_exp.py  IF_curr_exp2.py  Izhikevich.py  Izikevich.py  README  SpikeSourcePoisson.py  StepCurrentSource.py  VAbenchmark_graphs.py  VAbenchmarks.py  VAbenchmarks2-csa.py  VAbenchmarks2.py  VAbenchmarks3.py  balanced_neuron_example.py  brunel.py  cell_type_demonstration.py  connections.py  current_injection.py  distrib_example.py  gif_neuron.py  iaf_neuron_with_current_generator.py  inhomogeneous_network.py  monolith_vs_composed.py  multi_synapse.py  multiquantal_synapses.py  music_events.py  music_example.py  music_simple.py  neo_example.py  nestml_neuron.py  nineml_brunel.py  nineml_neuron.py  (+30 more)
examples/Potjans2014/: README.txt  connectivity.py  microcircuit.py  network.py  network_params.py  plotting.py  run_microcircuit.py  scaling.py  sim_params.py  validation_microcircuit.py
examples/arbor_rough/: 1_Construct_Arbor_tree_morph_cable-Copy1.ipynb  1_Construct_Arbor_tree_morph_cable.ipynb  2_Setup_Cell.ipynb  3_Simulate-Copy1.ipynb  3_Simulate-Copy2.ipynb  3_Simulate.ipynb  ArrayMorphology.ipynb  Brian2_hodgkin_huxley_1952-Copy1.ipynb  Brian2_hodgkin_huxley_1952.ipynb  DEMO_PyNN_Arbor_Network.ipynb  DEMO_PyNN_Arbor_SingleCell-Copy1.ipynb  (+64 more)
hoc/: IF_BG5.mod  alphasyn.mod  layerConn.hoc  netLayer.hoc  odict.hoc  refrac.mod  reset.mod  standardCells.hoc  stdwa_songabbott.mod  stdwa_symm.mod  test_StandardIF.hoc
misc/: memtest3.py  nrn_setup.py
pyNN/: __init__.py  connectors.py  connectors2.py  core.py  errors.py  models.py  morphology.py  multisim.py  network.py  neuroml.py  parameters.py  random.py  serialization.py  space.py  spiNNaker.py
src/: __init__.py  __init__.py,cover  cells.py  common.py  common.py,cover  connectors.py  connectors2.py  core.py  errors.py  facetsml.py  facetsml.py,cover  models.py  multisim.py  music.py  nest1.py  neuroml.py  neuroml.py,cover  neuroml2.py  oldneuron.py  parameters.py  random.py  random.py,cover  recording.py  recording.py,cover  space.py  standardmodels.py  synapses.py  utility.py  utility.py,cover
src_new/: __init__.py  common.py  models.py  params.py  units.py
test/: AdaptiveExponentialIF.py  Dockerfile  EIF_cond_alpha_isfa_ista.py  HH_cond_exp.py  IF_cond_alpha.py  IF_cond_exp.py  IF_curr_alpha.py  IF_curr_alpha2.py  IF_curr_exp.py  IF_curr_exp2.py  README  SpikeSourcePoisson.py  VAbenchmark2.py  VAbenchmark2_graphs.py  VAbenchmark_graphs.py  VAbenchmarks.py  brunel.py  calc.py  checkAPI.py  connectors_benchmark.py  docker-compose.yml  docker-entrypoint.sh  environment-nest3.9.yml  explore_space.py  generictests.py  incremental_spiketime_set.py  multisim.py  nest1tests.py  nest2tests.py  nest_test.py  nesttests.py  neuromltest.py  neuron2tests.py  neurontests.py  nrnpython  oldneurontests.py  pcsimtests_lowlevel.py  pcsimtests_population.py  pyNNPcsimLowLevelTest.py  pyNNPcsimPopulationTest.py  (+20 more)
(+733 files in other folders)
